# raptrix-psse-rs
# Copyright (c) 2026 Musto Technologies LLC
#
# This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
# If a copy of the MPL was not distributed with this file, You can obtain one at
# https://mozilla.org/MPL/2.0/.

[package]
name = "raptrix-psse-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Musto Technologies LLC <dev@mustotechnologies.com>"]
license = "MPL-2.0"
description = "High-performance PSS/E (.raw + .dyr) → Raptrix PowerFlow Interchange v0.8.4 converter"
repository = "https://github.com/MustoTechnologies/raptrix-psse-rs"
keywords = ["psse", "power-systems", "converter", "raptrix", "cim"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
anyhow = "1.0"
arrow = "58.0"
clap = { version = "4", features = ["derive"] }
# Sibling repo — use relative path so the absolute local directory stays off GitHub.
raptrix-cim-arrow = { path = "../raptrix-cim-rs/raptrix-cim-arrow" }

[dev-dependencies]
# Golden-file integration tests depend on the raptrix-cim-arrow reader.
