# raptrix-psse-rs
# Copyright (c) 2026 Raptrix PowerFlow
#
# This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
# If a copy of the MPL was not distributed with this file, You can obtain one at
# https://mozilla.org/MPL/2.0/.

[package]
name = "raptrix-psse-rs"
version = "0.3.8"
edition = "2024"
rust-version = "1.85"
authors = ["Raptrix PowerFlow <dev@raptrix.com>"]
license = "MPL-2.0"
description = "High-performance PSS/E (.raw + .dyr) -> Raptrix PowerFlow Interchange v0.9.4 converter"
repository = "https://github.com/RaptrixPowerFlow/raptrix-psse-rs"
keywords = ["psse", "power-systems", "converter", "raptrix", "cim"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
anyhow = "1.0"
arrow = "58.0"
chrono = { version = "0.4", default-features = true }
clap = { version = "4", features = ["derive"] }
# Use the public raptrix-cim-rs implementation (CIM is canonical).
# Previously this repo contained an embedded `raptrix-cim-arrow` crate.
# The canonical source is the IEC 61970 CIM implementation at GitHub;
# depend on the public repository instead of a local path.
raptrix-cim-arrow = { git = "https://github.com/RaptrixPowerFlow/raptrix-cim-rs", rev = "ea6b02a6c33e4551dc66ce82d887d30c5c22f5ab" }

[dev-dependencies]
# Golden-file integration tests depend on the raptrix-cim-arrow reader.
tempfile = "3.8"

[profile.release]
opt-level = 3
# Link-time optimization for best runtime performance
lto = true
# Fewer codegen units yields better optimizations at the cost of slower compile
codegen-units = 1
debug = false
incremental = false
