# Raptrix CIM-Arrow — High-performance open CIM profile by Raptrix PowerFlow
# Copyright (c) 2026 Raptrix PowerFlow
#
# This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
# If a copy of the MPL was not distributed with this file, You can obtain one at
# https://mozilla.org/MPL/2.0/.

[package]
name = "raptrix-cim-arrow"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Raptrix PowerFlow <dev@raptrix.com>"]
license = "MPL-2.0"
description = "Shared CIM-Arrow writer/serialiser for the Raptrix PowerFlow Interchange format (stub — replace with the real crate from raptrix-cim-rs)"
repository = "https://github.com/RaptrixPowerFlow/raptrix-cim-rs"

[dependencies]
